# intraday_research

./: .env.example  .gitignore  CLAUDE.md  README.md  dashboard.py  main.py  pyproject.toml  run_live.py
analytics/: performance.py
backtest/: engine.py  portfolio.py  walk_forward.py
backtests/: diagnose.py  run_backtest.py  run_full_backtest.py  run_ml_backtest.py
config/: default.yaml
data/: __init__.py  alpaca_handler.py  base.py  handlers.py  loaders.py
execution/: alpaca_trader.py  base.py  cost_model.py
state/: last_signals.json
strategies/: base.py  buy_and_hold.py  composite.py  cross_sectional_momentum.py  macro_regime.py  mean_reversion.py  mvrv_filter.py  pairs_arb.py  tod_filter.py  ts_momentum.py  volatility_breakout.py
strategies/ml/: base_ml.py  direction_ml.py
utils/: secrets.py
